--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.3",
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
