--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.3",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
