--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.3",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-modal": "^3.16.1",
     "react-toastify": "^10.0.4"
   },
